Background image added

--- a/web_static/styles/2-footer.css
+++ b/web_static/styles/2-footer.css
@@ -4,6 +4,9 @@ footer {
     width: 100%;
     position: absolute;
     bottom: 0%;
+   
+}
+footer p {
     text-align: center;
-    line-height: 60px;
+    margin: 20px;
 }
